Melhorando o sistema Pet
